[!!!][+TASK] BlogExample: Adjust BlogExample to Extbase 1.3
This commit incorporates following changes:
- Updated version from 1.2 to 1.3
- Set dependency to Extbase/Fluid v1.3 and TYPO3 v4.5
- General cleanup according to CGL, some minor tweaks
- Renamed templates & layouts to be UpperCamelCase
- Localization of all aspects (templates, flashmessages, validation errors)
- Improved plaintext rendering
- Administrative actions are only visible to logged in FE users
- Use of pagination widget for blog and post listings
- Added exemplary CSS styles and made templates (X)HTML valid

Change-Id: I3e6bef67abb8b7c5b1e5500cfe8de3771a66f89b

--- a/Resources/Private/Backend/Templates/Blog/Edit.html
+++ b/Resources/Private/Backend/Templates/Blog/Edit.html
@@ -1,9 +1,15 @@
-<f:layout name="default" />
+<f:layout name="Default" />
+
+<f:section name="iconButtons">
+	<f:be.buttons.icon uri="{f:uri.action(action:'index')}" icon="closedok" title="Cancel" />
+	<f:be.buttons.icon uri="javascript: document.blog.submit();" icon="saveandclosedok" title="Save" />
+	<f:be.buttons.icon uri="{f:uri.action(action:'delete', arguments:{blog: blog})}" icon="deletedok" title="Delete this blog" />
+</f:section>
 
 <f:section name="content">
-	<div class="csc-header csc-header-n1"><h1 class="csc-firstHeader">Edit blog "{blog.title}"</h1></div>
+	<h2>Edit blog "{blog.title}"</h2>
 	<p class="bodytext">Edit the information about your blog below:</p>
-	<f:render partial="formErrors" arguments="{for: 'blog'}" />
+	<f:render partial="FormErrors" arguments="{for: 'blog'}" />
 	<f:form method="post" action="update" name="blog" object="{blog}">
 		<label for="title">Title</label><br />
 		<f:form.textbox property="title" /><br />
@@ -11,6 +17,5 @@
 		<f:form.textarea property="description" rows="8" cols="46" /><br />
 		<label for="administrator">Administrator</label><br />
 		<f:form.select property="administrator" value="{blog.administrator}" options="{administrators}" optionLabelField="name"><select><option>dummy</option></select></f:form.select><br />
-		<f:form.submit class="submit" value="Submit"/>
 	</f:form>
 </f:section>
