--- a/Resources/Private/Backend/Templates/Blog/Index.html
+++ b/Resources/Private/Backend/Templates/Blog/Index.html
@@ -1,4 +1,4 @@
-<f:layout name="default" />
+<f:layout name="Default" />
 
 <f:section name="iconButtons">
 	<f:be.buttons.icon uri="{f:uri.action(action:'new')}" icon="new_el" title="Create new Blog" />
