--- a/Resources/Private/Backend/Templates/Post/Index.html
+++ b/Resources/Private/Backend/Templates/Post/Index.html
@@ -1,4 +1,4 @@
-<f:layout name="default" />
+<f:layout name="Default" />
 
 <f:section name="iconButtons">
 	<f:be.buttons.icon uri="{f:uri.action(action:'index', controller:'Blog')}" icon="closedok" title="Back" />
