--- a/Resources/Private/Backend/Layouts/Default.html
+++ b/Resources/Private/Backend/Layouts/Default.html
@@ -28,7 +28,7 @@
 		</div>
 		<div id="typo3-docbody">
 			<div id="typo3-inner-docbody">
-				<f:renderFlashMessages class="tx-extbase-flash-message" />
+				<f:flashMessages renderMode="div" />
 				<f:render section="content" />
 			</div>
 		</div>
