--- a/Resources/Private/Backend/Templates/Blog/New.html
+++ b/Resources/Private/Backend/Templates/Blog/New.html
@@ -1,4 +1,4 @@
-<f:layout name="default" />
+<f:layout name="Default" />
 
 <f:section name="iconButtons">
 	<f:be.buttons.icon uri="{f:uri.action(action:'index')}" icon="closedok" title="Cancel" />
@@ -8,7 +8,7 @@
 <f:section name="content">
 	<h2>Create a new blog</h2>
 	<p class="bodytext">Enter information about your new blog below:</p>
-	<f:render partial="formErrors" arguments="{for: 'newBlog'}" />
+	<f:render partial="FormErrors" arguments="{for: 'newBlog'}" />
 	<f:form method="post" controller="Blog" action="create" name="newBlog" object="{newBlog}">
 		<label for="title">Title <span class="required">(required)</span></label><br />
 		<f:form.textbox property="title" /><br />
